[package]
name = "openservicebroker"
version = "0.1.0"
authors = ["Logan Mzz <loganmzz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=3.3.3"
actix-rt = "1.0"
serde = "1.0.104"
serde_json = "1.0.48"
anyhow = "1.0.32"
