[package]
name = "openservicebroker"
version = "0.1.0"
authors = ["Logan Mzz <loganmzz@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.3.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
anyhow = "1.0.32"
